# highway-test

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  common.h  flake.nix  main.cpp
lt128/: lt128.h  lt128_highway.cpp  lt128_highway_asm.cpp  lt128_highway_asm_imm_odd_even.cpp  lt128_highway_old.cpp  lt128_manual1.cpp  lt128_manual2.cpp  lt128_optimize_for_x280.cpp  lt128_optimize_for_x280_change_vtype.cpp  lt128_optimize_for_x280_use_shift.cpp  lt128_test.cpp
lt128/new_framework/: lt128_highway.cpp  lt128_highway_clang19.cpp  lt128_highway_manual_schedule.cpp  lt128_optimize_for_x280.cpp  lt128_optimize_for_x280_change_vtype.cpp  lt128_optimize_for_x280_use_add.cpp  lt128_optimize_for_x280_use_shift.cpp  lt128_synthesized.cpp  lt128_synthesized2.cpp
min128/: min128.h  min128_highway.cpp  min128_highway_asm_imm_odd_even.cpp  min128_test.cpp
